--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Nabla&display=swap');
+
 html{
     display:flex;
     flex-direction: column;
    text-align: center;
+   
 }
 body{
     margin:0;
@@ -52,20 +53,30 @@ label{
     display: inline;
     padding: 0rem 1rem;
     font-size: large;
+    font-family: cursive;
     
 
 }
 .nav-heading{
     display: flex;
     margin:0;
-    padding:1rem;
+    padding-top:1rem;
     font-size:xx-large;
+    font-family: cursive;
+    
+}
+ul{
+    margin:0;
+    padding-top:0;
 }
 a{ text-decoration: none;
 color: black;}
 nav{
 background-color: violet;
 margin:0;
+padding:0rem;
+border-bottom-left-radius: 1rem;
+border-bottom-right-radius: 1rem;
 
 }
  
