--- a/style_area.css
+++ b/style_area.css
@@ -52,14 +52,21 @@ label{
     display: inline;
     padding: 0rem 1rem;
     font-size: large;
+    font-family: cursive;
     
 
 }
 .nav-heading{
     display: flex;
     margin:0;
-    padding:1rem;
+    padding-top:1rem;
     font-size:xx-large;
+    font-family: cursive;
+    
+}
+ul{
+    margin:0;
+    padding-top:0;
 }
 a{ text-decoration: none;
 color: black;}
