--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ body{
     
     
 }
+img{
+    max-width:300px;
+}
 label,input{
     display: block;
     font-size: x-large;
@@ -78,5 +81,15 @@ padding:0rem;
 border-bottom-left-radius: 1rem;
 border-bottom-right-radius: 1rem;
 
+}
+@media screen and (max-width:400px){
+    .nav-list-item{
+        display: inline;
+        padding: 0rem 1rem;
+        font-size: small;
+        font-family: cursive;
+        
+    
+    }
 }
  
