--- a/style_area.css
+++ b/style_area.css
@@ -15,6 +15,9 @@ body{
     
     
 }
+img{
+    max-width:300px;
+}
 label,input{
     display: block;
     font-size: x-large;
@@ -74,4 +77,14 @@ nav{
 background-color: violet;
 margin:0;
 
+}
+@media screen and (max-width:400px){
+    .nav-list-item{
+        display: inline;
+        padding: 0rem 1rem;
+        font-size: small;
+        font-family: cursive;
+        
+    
+    }
 }
