--- a/style_quiz.css
+++ b/style_quiz.css
@@ -37,6 +37,9 @@ body{
     font-family: cursive;
     
 }
+main{
+    padding:2rem;
+}
 ul{
     margin:0;
     padding-top:0;
@@ -66,4 +69,14 @@ label{
     font-size: xx-large;
     margin-top: 1rem;
     font:bolder;
+}
+@media screen and (max-width:400px){
+    .nav-list-item{
+        display: inline;
+        padding: 0rem 1rem;
+        font-size: small;
+        font-family: cursive;
+        
+    
+    }
 }
